fix(box): make checkerboard visible with set opacity in mdjs-layout and multistories

--- a/box/src/Box.module.css
+++ b/box/src/Box.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  z-index: 0;
 }
 
 #checkered {
